plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'c'
}

group = 'com.illunex'
//version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

ext {
    springCloudAwsVersion = '3.0.0'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    implementation 'org.projectlombok:lombok'

    implementation 'org.json:json:20231013'

    implementation 'org.mariadb.jdbc:mariadb-java-client'
    implementation 'org.modelmapper:modelmapper:3.1.0'

    implementation 'org.apache.poi:poi:5.4.1'

    // jwt 설정
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // aws common
    implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:${springCloudAwsVersion}")
    // aws s3
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'
    // aws email
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'software.amazon.awssdk:sesv2:2.29.23'

    // QueryDSL 관련 설정
    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // jwt 설정
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.3'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.3'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.3'

    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.apache.poi:poi-ooxml:5.2.3'
}

test {
    useJUnitPlatform()
}

springBoot {
    buildInfo()
    mainClass = "com.illunex.emsaasrestapi.EmSaasRestApiApplication"
}